--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "test.js",
   "dependencies": {
+    "eruda": "^1.4.3",
     "puppeteer": "^1.3.0"
   },
   "devDependencies": {},
