--- a/wegame/project.config.json
+++ b/wegame/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -9,8 +9,8 @@
 	},
 	"compileType": "game",
 	"libVersion": "game",
-	"appid": "touristappid",
-	"projectname": "wegame",
+	"appid": "wxaf9e9260d9027dc3",
+	"projectname": "FirstRubik",
 	"isGameTourist": true,
 	"condition": {
 		"search": {
