微信小游戏 正反视图转动操控修改

--- a/wegame/project.config.json
+++ b/wegame/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "game",
 	"libVersion": "game",
-	"appid": "wxaf9e9260d9027dc3",
+	"appid": "touristappid",
 	"projectname": "FirstRubik",
 	"isGameTourist": true,
 	"condition": {
