--- a/lesson/demo8/project.config.json
+++ b/lesson/demo8/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "game",
 	"libVersion": "game",
 	"appid": "wx699b2fe2746f34f2",
-	"projectname": "%E4%BB%A3%E7%A0%81%E6%95%B4%E7%90%86",
+	"projectname": "CodeReview",
 	"isGameTourist": true,
 	"condition": {
 		"search": {
